# DeepGEMM

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GEMM算子代码分析总结.md  Makefile  README.md  SECURITY.md  build_sgl_deep_gemm.sh  develop.sh  install.sh  pyproject.toml  pytest.ini  ruff.toml  setup.py  typos.toml  我的需求.md
.codex/skills/cpp/: SKILL.md
.codex/skills/cpp/references/: structure.md
.codex/skills/readable-cpp/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: build.sh
.github/workflows/: _build.yml  build.yml  publish.yml
adaptive_gemm/include/adaptive_gemm/: fp8_gemm.cuh  fp8_gemm_dw.cuh  fp8_gemm_varlen_groupM.cuh  mma_utils.cuh  scheduler.cuh  scheduler_varlen_groupM.cuh  tma_utils.cuh
adaptive_gemm/jit/: compiler.py  template.py
adaptive_gemm/jit_kernels/: gemm.py  k_grouped_gemm_dw.py  m_grouped_gemm.py  m_grouped_gemm_varlen.py  utils.py
benchmark/: README.md
csrc/: python_api.cpp  tvm_ffi_api.cpp
csrc/apis/: attention.hpp  einsum.hpp  gemm.hpp  hyperconnection.hpp  layout.hpp  mega.hpp  runtime.hpp  sm90_mega.hpp
csrc/indexing/: main.cu
csrc/jit/: cache.hpp  compiler.hpp  device_runtime.hpp  handle.hpp  kernel_runtime.hpp
csrc/jit_kernels/heuristics/: common.hpp  config.hpp  mega_moe.hpp  runtime.hpp  sm100.hpp  sm120.hpp  sm90.hpp  sm90_mega_moe.hpp
csrc/jit_kernels/impls/: runtime_utils.hpp  sm100_bf16_gemm.hpp  sm100_bf16_mega_moe.hpp  sm100_bmk_bnk_mn.hpp  sm100_fp4_gemm_1d1d.hpp  sm100_fp8_fp4_gemm_1d1d.hpp  sm100_fp8_fp4_mega_moe.hpp  sm100_fp8_fp4_mega_moe_split.hpp  sm100_fp8_gemm_1d1d.hpp  sm100_fp8_gemm_1d2d.hpp  sm100_mqa_logits.hpp  sm100_tf32_hc_prenorm_gemm.hpp  sm120_bf16_gemm.hpp  sm120_bmk_bnk_mn.hpp  sm120_fp8_einsum.hpp  sm120_fp8_fp4_gemm_1d1d.hpp  sm120_tf32_hc_prenorm_gemm.hpp  sm90_bf16_gemm.hpp  sm90_bmk_bnk_mn.hpp  sm90_fp8_fp4_gemm_1d2d.hpp  sm90_fp8_fp4_gemm_1d2d_rs.hpp  sm90_fp8_gemm_1d1d.hpp  sm90_fp8_gemm_1d2d.hpp  sm90_fp8_mega_moe.hpp  sm90_fp8_mega_moe_cooperative.hpp  sm90_fp8_mega_moe_pingpong.hpp  sm90_fp8_mqa_logits.hpp  sm90_mxfp8_fp8_gemm_1d2d.hpp  sm90_tf32_hc_prenorm_gemm.hpp  sm90_w4a8_mega_moe.hpp  smxx_clean_logits.hpp  smxx_cublaslt.hpp  smxx_fp8_fp4_mqa_logits.hpp  smxx_fp8_fp4_paged_mqa_logits.hpp  smxx_fp8_mqa_logits.hpp  smxx_fp8_paged_mqa_logits.hpp  smxx_layout.hpp
csrc/utils/: exception.hpp  layout.hpp  math.hpp  msvc_compat.hpp  system.hpp
deep_gemm/: _C.cp310-win_amd64.pyd  __init__.py  utils.py
deep_gemm/include/deep_gemm/: fp8_gemm.cuh  fp8_gemm_dw.cuh  fp8_gemm_varlen_groupM.cuh  fp8_wgrad_gemm.cuh  mma_utils.cuh  nvrtc_std.cuh  scheduler.cuh  scheduler_varlen_groupM.cuh  tma_utils.cuh  utils.cuh
deep_gemm/include/deep_gemm/comm/: barrier.cuh
deep_gemm/include/deep_gemm/common/: cpasync_copy.cuh  math.cuh  scheduler.cuh  sm120_utils.cuh  sm90_utils.cuh  split_k_reduce.cuh  types.cuh  utils.cuh
deep_gemm/include/deep_gemm/epilogue/: sm100_store_cd.cuh  sm100_store_cd_swap_ab.cuh
deep_gemm/include/deep_gemm/impls/: sm100_bf16_gemm.cuh  sm100_bf16_mega_moe.cuh  sm100_bmk_bnk_mn.cuh  sm100_fp4_gemm_1d1d.cuh  sm100_fp4_mqa_logits.cuh  sm100_fp4_paged_mqa_logits.cuh  sm100_fp8_fp4_gemm_1d1d.cuh  sm100_fp8_fp4_mega_moe.cuh  sm100_fp8_gemm_1d1d.cuh  sm100_fp8_gemm_1d2d.cuh  sm100_fp8_mqa_logits.cuh  sm100_fp8_mqa_logits_2cta.cuh  sm100_fp8_mqa_logits_f16_weights.cuh  sm100_fp8_paged_mqa_logits.cuh  sm100_mega_moe_pre_dispatch.cuh  sm100_mqa_logits.cuh  sm100_tf32_hc_prenorm_gemm.cuh  sm120_bf16_gemm.cuh  sm120_bmk_bnk_mn.cuh  sm120_fp4_mqa_logits.cuh  sm120_fp4_paged_mqa_logits.cuh  sm120_fp8_einsum.cuh  sm120_fp8_fp4_gemm_1d1d.cuh  sm120_fp8_mqa_logits.cuh  sm120_fp8_paged_mqa_logits.cuh  sm120_split_k_reduce.cuh  sm120_tf32_hc_prenorm_gemm.cuh  sm90_bf16_gemm.cuh  sm90_fp4_mqa_logits.cuh  sm90_fp8_fp4_gemm_1d2d.cuh  sm90_fp8_fp4_gemm_1d2d_rs.cuh  sm90_fp8_fp4_mega_moe.cuh  sm90_fp8_gemm_1d1d.cuh  sm90_fp8_gemm_1d2d.cuh  sm90_fp8_mega_moe.cuh  sm90_fp8_mega_moe_cooperative.cuh  sm90_fp8_mega_moe_pingpong.cuh  sm90_fp8_mqa_logits.cuh  sm90_fp8_paged_mqa_logits.cuh  (+6 more)
deep_gemm/jit/: __init__.py  compiler.py  interleave_ffma.py  runtime.py  template.py  utils.py
deep_gemm/jit_kernels/: __init__.py  config.py  gemm.py  k_grouped_gemm_dw.py  m_grouped_gemm.py  m_grouped_gemm_varlen.py  runtime.py  tuner.py  utils.py  wgrad_gemm.py
deep_gemm/mega/: __init__.py
deep_gemm/testing/: bench.py  numeric.py
deep_gemm/utils/: layout.py  math.py
docs/: API_REFERENCE.md  sm90_megamoe_config_search.md
scripts/: docker-build.sh  generate_pyi.py
sgl_deep_gemm/: README.md  __init__.py  cuda_helpers.py  pyproject.toml  run_tests.sh
sgl_deep_gemm/tests/: generators.py  test_bf16.py  test_fp8_fp4.py  test_legacy.py  test_mega_moe.py  test_mega_moe_l1_sentinel.py
tests/: CMakeLists.txt  CUTLASS_TMA_TESTS.md  GPS_CONFIG_TESTING_README.md  bench_mega_moe_sm90.py  bench_mega_moe_sm90_skew.py  bench_mega_moe_sm90_skewed.py  bench_w4a8_mega_moe_sm90.py  conftest.py  cutlass_tma_performance_test.cu  generators.py  run_cutlass_tma_tests.sh  test_attention.py  test_bf16.py  test_core.py  test_einsum.py  test_fp4.py  test_fp8.py  test_fp8_fp4.py  test_jit.py  test_l1_single_token.py  test_layout.py  test_mega_moe.py  test_mega_moe_capacity.py  test_mega_moe_hopper.py  test_mega_moe_sm90.py  test_mega_moe_sm90_mimo.py  test_mega_moe_split.py  test_sanitizer.py  test_setup_versioning.py  test_signal_gemm.py  test_sm120_kernels.py  test_sm120_reference.py  test_sm90_fp8_fp4.py  test_sm90_mxfp8_fp8.py  test_sm90_small_m_alignment.py  test_split_k_swap.py  test_varlen_groupk.py  test_varlen_groupm.py  test_w4afp8.py
tests/sm120/: run_regression.sh  test_ab_swap.py  test_dense_fp4.py  test_dense_fp8.py  test_dense_fp8_fp4_mixed.py  test_k_grouped_fp8.py  test_m_grouped_fp8.py  test_mqa_logits.py
tools/: bench_sm90_small_m_m_grouped.py
(+20 files in other folders)
