[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0.0",
    "packaging",
]
build-backend = "setuptools.build_meta"

[project]
name = "deep_gemm"
dynamic = ["version"]
description = "DeepGEMM: Clean and efficient FP8 GEMM kernels with fine-grained scaling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "DeepSeek-AI" },
]
keywords = ["CUDA", "GEMM", "FP8", "deep learning", "GPU"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/deepseek-ai/DeepGEMM"
Repository = "https://github.com/deepseek-ai/DeepGEMM"
Issues = "https://github.com/deepseek-ai/DeepGEMM/issues"

[tool.setuptools]
packages = ["deep_gemm"]

[tool.setuptools.dynamic]
version = {attr = "deep_gemm.__version__"}

[tool.setuptools.package-data]
deep_gemm = [
    "include/deep_gemm/**/*",
    "include/cute/**/*",
    "include/cutlass/**/*",
]
